--- a/projects/demo/src/app/counter/counter.component.html
+++ b/projects/demo/src/app/counter/counter.component.html
@@ -21,9 +21,7 @@
       <button class="btn btn-primary" (click)="infinityCounterMax()">
         <i class="bi bi-infinity"></i>
       </button>
-      <button class="btn btn-primary" (click)="resetCounter()">
-        Reset counter
-      </button>
+      <button class="btn btn-primary" (click)="resetCounter()">Reset</button>
       <button class="btn btn-primary" (click)="startStopCounter()">
         {{ state.countingStopped ? "Start" : "Stop" }}
       </button>
