--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -21,6 +21,9 @@
 
   }
 
-  <app-counter></app-counter>
-  <app-todo-list></app-todo-list>
+  <div class="accordion">
+    <app-counter></app-counter>
+    <app-calculator></app-calculator>
+    <app-todo-list></app-todo-list>
+  </div>
 </div>
