--- a/projects/demo/src/app/counter/counter.component.html
+++ b/projects/demo/src/app/counter/counter.component.html
@@ -1,45 +1,57 @@
 @if (state$ | async; as state) {
-
 <div
-  class="card m-4 bg-danger shadow"
+  class="accordion-item bg-danger mb-2"
   [ngClass]="'bg-opacity-' + state.opacity"
 >
-  <h5 class="card-header">Counter</h5>
-  <div class="card-body">
-    <div class="hstack gap-3 align-items-end">
-      <label for="counterMaxInput" class="form-label">Counter max:</label>
-      <input
-        #counterMaxInput
-        id="counterMaxInput"
-        type="number"
-        [min]="1"
-        [value]="state.counterMax ?? null"
-        (input)="changeCounterMax()"
-        class="form-control"
-        style="width: 100px"
-      />
-      <button class="btn btn-primary" (click)="infinityCounterMax()">
-        <i class="bi bi-infinity"></i>
-      </button>
-      <button class="btn btn-primary" (click)="resetCounter()">Reset</button>
-      <button class="btn btn-primary" (click)="startStopCounter()">
-        {{ state.countingStopped ? "Start" : "Stop" }}
-      </button>
-    </div>
-
-    <div class="display-4 text-center mt-4 mb-3">
-      {{ state.countingStopped ? "STOPPED" : state.counter }}
-    </div>
-    @if (!!state.counterMax) {
-    <div class="progress" role="progressbar">
-      <div class="progress-bar" [ngStyle]="{ width: state.percent + '%' }">
-        {{ state.percent | number : ".0-0" }}%
+  <h2 class="accordion-header">
+    <button
+      class="accordion-button"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#panelCounter"
+      aria-expanded="true"
+      aria-controls="panelCounter"
+    >
+      <b>Counter</b>
+    </button>
+  </h2>
+  <div id="panelCounter" class="accordion-collapse collapse show">
+    <div class="accordion-body">
+      <div class="hstack gap-3 align-items-end">
+        <label for="counterMaxInput" class="form-label">Counter max:</label>
+        <input
+          #counterMaxInput
+          id="counterMaxInput"
+          type="number"
+          [min]="1"
+          [value]="state.counterMax ?? null"
+          (input)="changeCounterMax()"
+          class="form-control"
+          style="width: 100px"
+        />
+        <button class="btn btn-primary" (click)="infinityCounterMax()">
+          <i class="bi bi-infinity"></i>
+        </button>
+        <button class="btn btn-primary" (click)="resetCounter()">Reset</button>
+        <button class="btn btn-primary" (click)="startStopCounter()">
+          {{ state.countingStopped ? "Start" : "Stop" }}
+        </button>
       </div>
-    </div>
-    }
-    <div>
-      Fraction: {{ state.fraction | number : ".3-3" }}, Square:
-      {{ state.square | number : ".0-0" }}
+
+      <div class="display-4 text-center mt-4 mb-3">
+        {{ state.countingStopped ? "STOPPED" : state.counter }}
+      </div>
+      @if (!!state.counterMax) {
+      <div class="progress" role="progressbar">
+        <div class="progress-bar" [ngStyle]="{ width: state.percent + '%' }">
+          {{ state.percent | number : ".0-0" }}%
+        </div>
+      </div>
+      }
+      <div>
+        Fraction: {{ state.fraction | number : ".3-3" }}, Square:
+        {{ state.square | number : ".0-0" }}
+      </div>
     </div>
   </div>
 </div>
