--- a/projects/demo/src/app/todo-list/todo-list.component.html
+++ b/projects/demo/src/app/todo-list/todo-list.component.html
@@ -1,69 +1,85 @@
 @if (state$ | async; as state) {
 <div
-  class="card m-4 bg-success shadow"
+  class="accordion-item bg-success"
   [ngClass]="'bg-opacity-' + state.opacity"
 >
-  <h5 class="card-header">Todo List</h5>
-  <div class="card-body">
-    <div class="row g-3">
-      <div class="col">
-        <input
-          #newTodoText
-          type="text"
-          class="form-control"
-          (input)="enableNewTodo()"
-          (keydown.enter)="newTodo()"
-        />
+  <h2 class="accordion-header">
+    <button
+      class="accordion-button"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#panelTodoList"
+      aria-expanded="true"
+      aria-controls="panelTodoList"
+    >
+      <b>Todo List</b>
+    </button>
+  </h2>
+  <div id="panelTodoList" class="accordion-collapse collapse show">
+    <div class="accordion-body">
+      <div class="row g-3">
+        <div class="col">
+          <input
+            #newTodoText
+            type="text"
+            class="form-control"
+            (input)="enableNewTodo()"
+            (keydown.enter)="newTodo()"
+          />
+        </div>
+        <div class="col-auto">
+          <button
+            [disabled]="state.disableNewTodo"
+            type="submit"
+            class="btn btn-primary"
+            (click)="newTodo()"
+          >
+            New todo
+          </button>
+        </div>
       </div>
-      <div class="col-auto">
-        <button
-          [disabled]="state.disableNewTodo"
-          type="submit"
-          class="btn btn-primary"
-          (click)="newTodo()"
-        >
-          New todo
-        </button>
-      </div>
-    </div>
 
-    <table class="table mt-3 mb-0">
-      <thead>
-        <tr>
-          <th scope="col">Text</th>
-          <th scope="col">Timestamp</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (todo of state.todos; track todo) {
-        <tr [ngClass]="todo.done ? 'text-decoration-line-through' : null">
-          <td>
-            {{ todo.text }}
-          </td>
-          <td>{{ todo.timestamp | date : "yyyy-MM-dd HH:mm:ss" }}</td>
-          <td style="width: 90px">
-            <button
-              class="btn btn-sm me-2"
-              [ngClass]="todo.done ? 'btn-primary' : 'btn-success'"
-              (click)="todoDoneToggle(todo)"
-            >
-              <i
-                class="bi"
-                [ngClass]="
-                  todo.done ? 'bi-arrow-counterclockwise' : 'bi-check2'
-                "
-              ></i>
-            </button>
-            <button class="btn btn-sm btn-danger" (click)="deleteTodo($index)">
-              <i class="bi bi-x-lg"></i>
-            </button>
-          </td>
-        </tr>
-        }
-      </tbody>
-    </table>
-    <em>Number of todos: {{ state.count }}</em>
+      <table class="table mt-3 mb-0">
+        <thead>
+          <tr>
+            <th scope="col">Text</th>
+            <th scope="col">Timestamp</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          @for (todo of state.todos; track todo) {
+          <tr [ngClass]="todo.done ? 'text-decoration-line-through' : null">
+            <td>
+              {{ todo.text }}
+            </td>
+            <td>{{ todo.timestamp | date : "yyyy-MM-dd HH:mm:ss" }}</td>
+            <td style="width: 90px">
+              <button
+                class="btn btn-sm me-2"
+                [ngClass]="todo.done ? 'btn-primary' : 'btn-success'"
+                (click)="todoDoneToggle(todo)"
+              >
+                <i
+                  class="bi"
+                  [ngClass]="
+                    todo.done ? 'bi-arrow-counterclockwise' : 'bi-check2'
+                  "
+                ></i>
+              </button>
+              <button
+                class="btn btn-sm btn-danger"
+                (click)="deleteTodo($index)"
+              >
+                <i class="bi bi-x-lg"></i>
+              </button>
+            </td>
+          </tr>
+          }
+        </tbody>
+      </table>
+      <em>Number of todos: {{ state.count }}</em>
+    </div>
   </div>
 </div>
 }
